<resources>
    <string name="app_name">ej1Repaso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduce_un_n_mero_con_decimales">Introduce un número con decimales</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="dividir">Dividir</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="resultado">Resultado:</string>
    <string name="guardar">Guardar</string>
    <string name="introduce_un_n_mero">Introduce un número</string>
    <string name="jugar">Jugar</string>
    <string name="vidas">Vidas</string>
    <string name="nivel">Nivel</string>
    <string name="intentos">Intentos</string>
    <string name="puntos">Puntos</string>
    <string name="pasado">Te has pasado</string>
    <string name="corto">Te has quedado corto</string>
</resources>